--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <nav class="navbar navbar-expand-lg navbar-light">
 
 
-                        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto justify-content-center">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                                 </li>
