--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
         <div class="banner">
             <h1>Best Business Hotel In Dhaka City</h1>
         </div>
+        <div class="timer">
+            <div class="overlay-timer"></div>
+            <div class="row">
+                <div class="col-3">
+                    <h6>Arrival</h6>
+                    <div class="container-arrival">
+                        <p>15-05-2020</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <h6>Departure</h6>
+                    <div class="container-arrival">
+                        <p>15-05-2020</p>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <h6>Guest</h6>
+                    div.
+                </div>
+                <div class="col-2">
+                    <h6>Children</h6>
+                </div>
+                <div class="col-2">
+                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Book Online</button>
+                </div>
+            </div>
+        </div>
 
 </div>
 
