--- a/index.html
+++ b/index.html
@@ -5,85 +5,139 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
 <div class="header">
     <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mx-auto nav-fill w-100">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Facilites</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Rooms</a>
-                                </li>
-                                <img src="img/logo.png" alt="">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Gallery</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact Us</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">About us</a>
-                                </li>
-                            </ul>
-                            <form class="form-inline my-2 my-lg-0">
-                                <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Book Online</button>
-                            </form>
-                        </div>
-                    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mx-auto nav-fill w-100">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Facilites</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Rooms</a>
+                            </li>
+                            <img src="img/logo.png" alt="">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                    aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About us</a>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Book
+                                Online
+                            </button>
+                        </form>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="banner">
+        <h1>Best Business Hotel In Dhaka City</h1>
+    </div>
+    <div class="timer">
+        <div class="overlay-timer"></div>
+        <div class="row">
+            <div class="col-3">
+                <h6>Arrival</h6>
+                <div class="container-arrival">
+                    <p>15-05-2020</p>
+                </div>
+            </div>
+            <div class="col-3">
+                <h6>Departure</h6>
+                <div class="container-arrival">
+                    <p>15-05-2020</p>
+                </div>
+            </div>
+            <div class="col-2">
+                <h6>Guest</h6>
+                <div class="guest">
+                    <p>3</p>
+                </div>
+            </div>
+            <div class="col-2">
+                <h6>Children</h6>
+                <div class="children">
+                    <p>2</p>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="timer-button">
+                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Check Availabilty
+                    </button>
                 </div>
             </div>
         </div>
-        <div class="banner">
-            <h1>Best Business Hotel In Dhaka City</h1>
-        </div>
-        <div class="timer">
-            <div class="overlay-timer"></div>
-            <div class="row">
-                <div class="col-3">
-                    <h6>Arrival</h6>
-                    <div class="container-arrival">
-                        <p>15-05-2020</p>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <h6>Departure</h6>
-                    <div class="container-arrival">
-                        <p>15-05-2020</p>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <h6>Guest</h6>
-                    div.
-                </div>
-                <div class="col-2">
-                    <h6>Children</h6>
-                </div>
-                <div class="col-2">
-                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Book Online</button>
-                </div>
-            </div>
-        </div>
+    </div>
 
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<div class="card">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4">
+                <div class="card1">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>Delux</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>Delux Twin</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>Premium</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
 </body>
 </html>
