--- a/index.html
+++ b/index.html
@@ -133,6 +133,49 @@
         </div>
     </div>
 </div>
+<div class="semibanner">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">
+
+            </div>
+
+            <div class="col-6">
+                <div class="semibanner-overlay"></div>
+                <div class="semibanner-rightside">
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Lobby <br> Coffee Shop</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Gift Shop</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Gym/Fitness<br>Center</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Car Rental</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Foreign Currency <br>Exchange</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Travel Desk</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Meet & Greet <br> Services</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Meeting room</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
