--- a/index.html
+++ b/index.html
@@ -176,6 +176,49 @@
         </div>
     </div>
 </div>
+<div class="food-banner">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6 p-0">
+                <div class="foodbanner-s1">
+
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="foodbanner-s2">
+                    <h2>Best Cousin</h2>
+                    <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has survived not only five centuries
+                    </p>
+                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="Read More">Book Online</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="middle-banner">
+    <div class="container-fluid">
+        <div class="row m-0">
+            <div class="col-12 p-0">
+                <div class="middle-content-image">
+                    <div class="row">
+                        <div class="col-6 p-0">
+                            <div class="middle-image-content">
+
+                            </div>
+                        </div>
+                        <div class="col-6 p-0">
+                            <div class="middle-image-content-banner">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
