done and dusted

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <title>Document</title>
 </head>
 <body>
@@ -58,7 +59,7 @@
         </div>
     </div>
     <div class="banner">
-        <h1>Best Business Hotel In Dhaka City</h1>
+        <h1>Best Business Hotel <br> In Dhaka City</h1>
     </div>
     <div class="timer">
         <div class="overlay-timer"></div>
@@ -88,10 +89,8 @@
                 </div>
             </div>
             <div class="col-2">
-                <div class="timer-button">
-                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit">Check Availabilty
+                <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="submit" style="width: 80%">Check Availabilty
                     </button>
-                </div>
             </div>
         </div>
     </div>
@@ -101,7 +100,7 @@
 <div class="card">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-sm-12 col-lg-4 col-xl-4">
                 <div class="card1">
                     <div class="card">
                         <div class="card-body">
@@ -111,7 +110,7 @@
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-12 col-sm-12 col-lg-4 col-xl-4">
                 <div class="card2">
                     <div class="card">
                         <div class="card-body">
@@ -121,7 +120,7 @@
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-12 col-sm-12 col-lg-4 col-xl-4">
                 <div class="card3">
                     <div class="card">
                         <div class="card-body">
@@ -137,37 +136,37 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
 
             </div>
 
-            <div class="col-6">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                 <div class="semibanner-overlay"></div>
                 <div class="semibanner-rightside">
                     <div class="row">
                         <div class="col-6">
-                            <p>Lobby <br> Coffee Shop</p>
+                            <p><i class="fas fa-mug-hot" style="margin-right: 8px; font-size: 30px"></i>Lobby <br> Coffee Shop</p>
                         </div>
                         <div class="col-6">
-                            <p>Gift Shop</p>
+                            <p><i class="fas fa-gifts" style="margin-right: 8px; font-size: 30px"></i>Gift Shop</p>
                         </div>
                         <div class="col-6">
-                            <p>Gym/Fitness<br>Center</p>
+                            <p><i class="fas fa-dumbbell" style="margin-right: 8px; font-size: 30px"></i>Gym/Fitness<br>Center</p>
                         </div>
                         <div class="col-6">
-                            <p>Car Rental</p>
+                            <p><i class="fas fa-car" style="margin-right: 8px; font-size: 30px"></i>Car Rental</p>
                         </div>
                         <div class="col-6">
-                            <p>Foreign Currency <br>Exchange</p>
+                            <p><i class="fas fa-euro-sign" style="margin-right: 8px; font-size: 30px"></i>Foreign Currency <br>Exchange</p>
                         </div>
                         <div class="col-6">
-                            <p>Travel Desk</p>
+                            <p><i class="fas fa-route"  style="margin-right: 8px; font-size: 30px"></i>Travel Desk</p>
                         </div>
                         <div class="col-6">
-                            <p>Meet & Greet <br> Services</p>
+                            <p><i class="far fa-handshake" style="margin-right: 8px; font-size: 30px"></i>Meet & Greet <br> Services</p>
                         </div>
                         <div class="col-6">
-                            <p>Meeting room</p>
+                            <p><i class="fas fa-user-friends" style="margin-right: 8px; font-size: 30px"></i>Meeting room</p>
                         </div>
                     </div>
                 </div>
@@ -179,12 +178,12 @@
 <div class="food-banner">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 p-0">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0">
                 <div class="foodbanner-s1">
 
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6">
                 <div class="foodbanner-s2">
                     <h2>Best Cousin</h2>
                     <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -203,18 +202,124 @@
             <div class="col-12 p-0">
                 <div class="middle-content-image">
                     <div class="row">
-                        <div class="col-6 p-0">
+                        <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0">
                             <div class="middle-image-content">
-
+                                <h1 style="font-size: 80px">Gallery</h1>
+                                <p style="font-size: 30px">Collection of best images<br>and Videos of our Hotel</p>
                             </div>
                         </div>
-                        <div class="col-6 p-0">
+                        <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0">
                             <div class="middle-image-content-banner">
 
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="advertisement">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="headerline">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 style="color: #120D40; font-size: 50px">Events & Offer</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="image-of-advertisement">
+
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="image-of-advertisement2">
+
+                            </div>
+                            <div class="image-of-advertisement3">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="man">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0">
+                <div class="man-content">
+                    <h2 style="color: #312782">Best Experience</h2>
+                    <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has survived not only five centuriessimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to make a type specimen book. It has survived not only five centuries
+                    </p>
+                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="Read More">Read More</button>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0">
+                <div class="man-talking">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="map">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0 p-0">
+                <div class="map-image">
+
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-lg-6 col-xl-6 p-0 m-40">
+                <div class="map-content">
+                    <img src="img/map-colorful.jpg" alt="" style="width: 50%">
+                    <p><i class="fas fa-address-card"  style="margin-right: 8px; font-size: 20px"></i>C/A, 35, Bir Uttam A.K Khandakar<br>Road, Dhaka 1212</p>
+                    <br>
+                    <p><i class="fas fa-mobile" style="margin-right: 8px; font-size: 20px"></i>02-9845003</p>
+                    <br>
+                    <br>
+                    <h3>Subscribe to our Newsletter</h3>
+                    <input type="text" placeholder="Enter your Email">
+                    <br>
+                    <button class="btn btn-outline-success my-2 my-sm-0 search-button" type="Read More">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 p-0">
+                <div class="footer-section">
+                    <h3>Follow us</h3>
+<!--                    <img src="img/logo.jpg" alt="">-->
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram-square"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="semi-footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 p-0">
+
+                    <p>Copy right &#169 2020 Invento Bangladesh</p>
+
             </div>
         </div>
     </div>
